--- a/Backend/package.json
+++ b/Backend/package.json
@@ -16,7 +16,11 @@
     "cors": "^2.8.6",
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
-    "pg": "^8.18.0",
-    "Router": "^2.1.0"
+    "jsonwebtoken": "^9.0.3",
+    "mongoose": "^9.2.2",
+    "pg": "^8.19.0",
+    "pg-hstore": "^2.3.4",
+    "Router": "^2.1.0",
+    "sequelize": "^6.37.7"
   }
 }
